--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -1,17 +1,28 @@
 .group-list {
     margin-top: 20px;
+    padding-inline: 30px;
     width: 100%;
+
+    .group-details {
+        width: 100%;
+    }
 
     .preview-group {
         display: flex;
         align-items: center;
         height: 100%;
+        width: 100%;
         justify-content: space-between;
         flex: 2;
         min-width: 260px;
+        border-inline-end: 6px solid transparent;
 
-        div {
+        .group-title {
+            @include flex(space-between, center, row);
+            padding-inline-end: 10px;
             height: 100%;
+            min-width: 275px;
+            flex: 2;
         }
     }
 
@@ -27,11 +38,11 @@
         transition: transform 0.5s;
     }
 
-    .sortable {
+    .group-container {
         display: flex;
         justify-content: start;
         gap: 0px;
-        margin-left: 15px;
+        // margin-left: 15px;
         .task-list {
             width: 100%;
         }
@@ -46,26 +57,10 @@
         gap: 5px;
         list-style-type: none;
         font-family: Lato-Light;
+        margin-bottom: 15px;
+
         .group-title {
             font-weight: 600;
-        }
-
-        // padding-inline: 20px;
-        margin: 0;
-        margin-bottom: 15px;
-        .group-details {
-            @include flex(space-between, center, row);
-            // margin: 2px;
-            width: 100%;
-            height: 34px;
-            position: relative;
-            // margin-left: 20px;
-
-            .el-dropdown {
-                .group-dropdown-menu {
-                    margin: 0;
-                }
-            }
         }
 
         li {
@@ -113,54 +108,17 @@
         }
     }
 
-    .group-title {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        height: 100%;
+    // .group-title {
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: flex-end;
+    //     height: 100%;
 
-        .el-dropdown {
-            display: flex;
-            align-items: center;
-        }
-    }
-
-    .columns {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-
-        .column-title {
-            position: relative;
-            right: 3px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 600;
-            min-width: 180px;
-            height: 100%;
-            transition: 0.3s;
-            cursor: pointer;
-            overflow: hidden;
-
-            &:hover {
-                background-color: #f5f5f5;
-            }
-
-            i {
-                font-size: 0.8rem;
-                color: lightgray;
-                padding-left: 9px;
-                padding-top: 4px;
-
-                &:first-of-type {
-                    padding-left: 0;
-                    padding-right: 9px;
-                }
-            }
-        }
-    }
+    //     .el-dropdown {
+    //         display: flex;
+    //         align-items: center;
+    //     }
+    // }
 }
 
 .el-color-picker {
@@ -173,5 +131,49 @@
     .el-color-picker__trigger {
         width: 100%;
         opacity: 0;
+    }
+}
+
+.columns {
+    display: flex;
+    min-width: 300px;
+
+    .column-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;
+        width: 180px;
+        height: 39px;
+        min-width: 75px;
+        transition: 0.3s;
+        cursor: grab;
+        // overflow: hidden;
+
+        &:hover {
+            background-color: #f5f5f5;
+        }
+
+        i {
+            font-size: 0.8rem;
+            color: lightgray;
+            padding-left: 9px;
+            padding-top: 4px;
+
+            &:first-of-type {
+                padding-left: 0;
+                padding-right: 9px;
+            }
+        }
+    }
+}
+
+@media (max-width: $break-wide) {
+    .group-container {
+        width: 1000px;
+    }
+
+    .group-list {
+        padding-inline: 10px;
     }
 }
