--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,4 +1,3 @@
-//970
 .home {
     height: 100vh;
     font-family: Lato;
@@ -6,7 +5,7 @@
         min-height: 70%;
         #nav {
             @include flex(flex-end);
-            // background-color: #595ad4;
+
             gap: 20px;
             margin-right: 130px;
             a {
@@ -23,14 +22,26 @@
         }
         .back {
             background-image: linear-gradient(
-                204deg
-                , #6C76B9, #4A89C4, #2B99C5, #2DA7BD, #4EB3B2, #66BDBC, #7CC7C6, #91D1D0, #AEDBE7, #CFE5F4, #ECF1FB, #FFFFFF);            background-size: cover;
+                204deg,
+                #6c76b9,
+                #4a89c4,
+                #2b99c5,
+                #2da7bd,
+                #4eb3b2,
+                #66bdbc,
+                #7cc7c6,
+                #91d1d0,
+                #aedbe7,
+                #cfe5f4,
+                #ecf1fb,
+                #ffffff
+            );
+            background-size: cover;
             min-height: 70%;
             width: 100%;
             position: absolute;
             top: 0;
             border-radius: 0 0 150px 0;
-            /* right: 0; */
             z-index: -1;
         }
         .title {
@@ -57,18 +68,6 @@
             .home-img {
                 width: 30vw;
             }
-            @media (max-width: 970px) {
-                flex-direction: column-reverse;
-                align-items: center;
-                margin-top: 0;
-
-                .home-img {
-                    width: 65%;
-                }
-                .home-desc {
-                    align-items: center;
-                }
-            }
         }
 
         .btn-go {
@@ -79,7 +78,7 @@
             border-radius: 15px;
             border: none;
             background-color: rgb(253, 253, 253);
-            color: #5E375E;
+            color: #5e375e;
             font-size: 19px;
             font-family: Roboto;
             text-transform: capitalize;
@@ -101,7 +100,7 @@
             border: none;
             cursor: pointer;
             background-color: rgb(253, 253, 253);
-            color: #5E375E;
+            color: #5e375e;
             font-size: 18px;
             font-family: Roboto;
             text-transform: capitalize;
@@ -111,13 +110,6 @@
 
             &:hover {
                 box-shadow: 0 0 5px black;
-            }
-        }
-        @media (max-width: 970px) {
-            height: 80%;
-            // margin-bottom: 40px;
-            .back {
-                height: 80%;
             }
         }
     }
@@ -133,8 +125,20 @@
             height: 120px;
             width: 120px;
             background-image: linear-gradient(
-                204deg
-                , #6C76B9, #4A89C4, #2B99C5, #2DA7BD, #4EB3B2, #66BDBC, #7CC7C6, #91D1D0, #AEDBE7, #CFE5F4, #ECF1FB, #FFFFFF);
+                204deg,
+                #6c76b9,
+                #4a89c4,
+                #2b99c5,
+                #2da7bd,
+                #4eb3b2,
+                #66bdbc,
+                #7cc7c6,
+                #91d1d0,
+                #aedbe7,
+                #cfe5f4,
+                #ecf1fb,
+                #ffffff
+            );
             border-radius: 50%;
             i {
                 position: relative;
@@ -152,38 +156,33 @@
             margin-bottom: 20px;
             h3 {
                 margin-bottom: 10px;
-                color: #6C76B9;
+                color: #6c76b9;
             }
             .desc {
                 width: 20ch;
-                color: #6C76B9;
+                color: #6c76b9;
             }
-        }
-        @media (max-width: 970px) {
-            padding-top: 40px;
         }
     }
 
     .details {
-        background-color: #ECF1FB;
+        background-color: #ecf1fb;
         min-height: 80%;
-        border-radius:200px 0 0 0;
+        border-radius: 200px 0 0 0;
         padding: 30px;
 
         @include flex(center, center, column);
-gap: 60px;
+        gap: 60px;
         .manage,
         .set-up {
             width: 80%;
-            @include flex(start,start);
+            @include flex(start, start);
             gap: 20px;
             div {
                 @include flex(start, start, column);
                 flex: 1;
                 img {
-                    // width: 80%;
                     border-radius: 5px;
-                    // flex: 1;
                 }
 
                 h2 {
@@ -196,23 +195,104 @@ gap: 60px;
                 }
             }
         }
-        @media (max-width: 970px) {
-            gap: 100px;
-            padding-top: 50px;
-            .manage,
-            .set-up {
-                flex-direction: column;
+    }
+}
+
+@media (max-width: $break-wide) {
+    .home {
+        .header {
+            #nav {
                 gap: 20px;
-                div {
-                    align-items: center;
-                    text-align: center;
-                    h2,
+            }
+
+            .title {
+                display: flex;
+                flex-direction: column-reverse;
+                align-items: center;
+                justify-content: center;
+                flex-wrap: wrap;
+                gap: 0;
+                margin: 0 20px;
+                margin-top: 0;
+
+                .home-desc {
+                    margin-top: 5px;
+                    height: 100%;
+                    @include flex(center, center, column);
                     p {
+                        font-size: 16px;
+                        color: white;
                         text-align: center;
+                        margin-bottom: 5px;
+                    }
+                    h2 {
+                        font-size: 1.5rem;
+                        color: white;
+                        text-shadow: 0 0 5px black;
+                    }
+
+                    .btn-go {
+                        margin-top: 10px;
+                        width: 50%;
+                        height: 45px;
+                        font-size: 1rem;
+                        padding: auto;
+                    }
+                }
+                .home-img {
+                    // width: 30vw;
+                    width: 100%;
+                    height: 150px;
+                }
+            }
+        }
+
+        .info {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 50px;
+
+            .item {
+                font-size: 0.9rem;
+                .icon {
+                    @include flex(center, center, row);
+                    font-size: 40px;
+
+                    i {
+                        width: 40px;
+                        height: 40px;
+                        font-size: 40px;
+                        position: relative;
+                        top: 0;
+                        right: 0;
+                        transform: none;
+                        color: white;
                     }
                 }
             }
         }
-        // background-color: #3f3f91;
+        .details {
+            @include flex(center, center, column);
+            gap: 10px;
+
+            .manage,
+            .set-up {
+                // display: flex;
+                // justify-content: center;
+                // align-items: center;
+                margin-top: 80px;
+                flex-direction: column;
+                text-align: center;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .set-up {
+                margin-bottom: 50px;
+            }
+        }
     }
 }
