--- a/src/styles/components/_task-list.scss
+++ b/src/styles/components/_task-list.scss
@@ -133,6 +133,7 @@
 
             .tag-summery {
                 div {
+                    font-size: rem(11px);
                     color: rgb(random(255), random(255), random(255));
                 }
 
