--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -32,7 +32,7 @@
 
     .ghost {
         border-left: 5px solid #555;
-        background: #c8ebfb;
+        background: #dddedf;
         box-shadow: 10px 10px 5px -1px rgba(0, 0, 0, 0.14);
         opacity: 0.5;
         transition: transform 0.5s;
@@ -166,6 +166,12 @@
             }
         }
     }
+}
+
+.ghost-columns {
+    background: #dddedf;
+    opacity: 0.5;
+    transition: transform 0.5s;
 }
 
 @media (max-width: $break-wide) {
