--- a/src/styles/components/_person-picker.scss
+++ b/src/styles/components/_person-picker.scss
@@ -9,20 +9,34 @@
     align-items: center;
     justify-content: center;
     width: 230px;
-    padding: 0.3rem;
-    border: 1px solid rgb(121, 121, 121);
+    border: 2px solid rgb(121, 121, 121);
     box-shadow: 0 0 1px 1px rgb(192, 192, 192);
     border-radius: 8px;
-    z-index: 2;
+    z-index: 200;
 
     .delegate-list,
     .member-list {
         width: 100%;
         padding: 0.3rem;
-        background-color: #f8f8f8;
+        background-color: #ffffff;
     }
     .delegate-list {
-        border-bottom: 2px solid rgb(194, 194, 194);
+        .el-divider {
+            margin: 10px auto;
+            // margin-bottom: 5px;
+        }
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+        // border-bottom: 1px solid rgb(150, 150, 150);
+    }
+
+    .member-list {
+        .el-divider {
+            margin: 10px auto;
+            // margin-bottom: 5px;
+        }
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
     }
 }
 
