--- a/src/styles/components/_person-preview.scss
+++ b/src/styles/components/_person-preview.scss
@@ -1,6 +1,7 @@
 .person-preview {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     width: 100%;
     padding: 0.3rem;
     transition: 0.2s;
