--- a/src/styles/components/_tags-column.scss
+++ b/src/styles/components/_tags-column.scss
@@ -1,10 +1,13 @@
 .tags-column .el-input__inner {
     box-shadow: none;
+    text-align: center;
 }
 .tags-column .el-select__input {
     box-shadow: none;
+    text-align: center;
 }
 .tags-column .el-tag {
+    text-align: center;
     background-color: #e4e4e4;
     border: 1px solid rgb(190, 190, 190);
     font-weight: 600;
