--- a/src/styles/components/_group-list.scss
+++ b/src/styles/components/_group-list.scss
@@ -31,7 +31,7 @@
     }
 
     .ghost {
-        border-left: 5px solid #555;
+        border: 1px dashed #555;
         background: #dddedf;
         box-shadow: 10px 10px 5px -1px rgba(0, 0, 0, 0.14);
         opacity: 0.5;
@@ -42,7 +42,6 @@
         display: flex;
         justify-content: start;
         gap: 0px;
-        // margin-left: 15px;
         .task-list {
             width: 100%;
         }
@@ -92,6 +91,8 @@
 
             .group-dropdown-menu {
                 margin-right: 0;
+                position: relative;
+                right: 2px;
             }
         }
 
@@ -127,6 +128,8 @@
     min-width: 300px;
 
     .column-title {
+        position: relative;
+        right: 2px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -136,7 +139,6 @@
         min-width: 75px;
         transition: 0.3s;
         cursor: grab;
-        // overflow: hidden;
 
         &:hover {
             background-color: #f5f5f5;
