--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -172,12 +172,25 @@
         padding: 30px;
 
         @include flex(center, center, column);
-        gap: 60px;
+        gap: 120px;
+
+        .manage {
+            margin-top: 60px;
+        }
+        .set-up {
+            margin-bottom: 60px;
+        }
         .manage,
         .set-up {
             width: 80%;
             @include flex(start, start);
             gap: 20px;
+            p {
+                margin-top: 1rem;
+                line-height: 1.2;
+                font-size: 1.2rem;
+                max-width: 60ch;
+            }
             div {
                 @include flex(start, start, column);
                 flex: 1;
@@ -294,5 +307,11 @@
                 margin-bottom: 50px;
             }
         }
+    }
+}
+@media (min-width: 1900px) {
+    .home-img {
+        width: 100%;
+        height: 400px;
     }
 }
